--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,13 +13,14 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.835.0",
     "@aws-sdk/client-dynamodb": "^3.490.0",
     "@aws-sdk/lib-dynamodb": "^3.490.0",
     "aws-jwt-verify": "^4.0.0",
     "cheerio": "^1.0.0-rc.12",
     "date-fns": "^3.2.0",
     "playwright": "^1.40.1",
-    "stripe": "^14.12.0",
+    "stripe": "^14.25.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
