--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,8 +13,10 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@aws-sdk/client-api-gateway": "^3.835.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.835.0",
     "@aws-sdk/client-dynamodb": "^3.490.0",
+    "@aws-sdk/client-ssm": "^3.835.0",
     "@aws-sdk/lib-dynamodb": "^3.490.0",
     "aws-jwt-verify": "^4.0.0",
     "cheerio": "^1.0.0-rc.12",
