--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -22,6 +22,7 @@
     "typescript": "~5.3.3"
   },
   "dependencies": {
+    "@aws-cdk/aws-amplify-alpha": "^2.202.0-alpha.0",
     "aws-cdk-lib": "^2.118.0",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
